# solana-protos

./: Cargo.toml  README.md  build.rs
.github/workflows/: protos.yml  rust.yml
protos/: auth.proto  buf.yaml  bundle.proto  preconf.proto  searcher.proto
src/: lib.rs
